fixed horizontal overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,7 @@ code {
 .row {
   padding-top: 2%;
   padding-bottom: 1%;
+  width: 100%;
 }
 
 .navbar {
@@ -62,12 +63,6 @@ code {
   border-radius: 3rem;
   margin-left: 2%;
   height: 500px;
-  /* width: 300px;
-  height: 600px;
-  position: absolute;
-  margin-top:2%;
-  padding-top:14%; 
-  padding-bottom: 2%; */
 }
 
 #canvas {
@@ -78,11 +73,4 @@ code {
   background-color: rgb(0, 153, 255);
   border-radius: 3rem;
   text-align: center;
-  /* margin-left: 10%;
-  margin-right: 15%;
-  margin-top:1%;
-  padding-top:1%;
-  padding-left:2%;
-  padding-right:15%; 
-  padding-bottom: 1%; */
 }
